--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,6 +56,7 @@ const slides = [
             tag={article.data.tag}
             tagName={article.data.tagName}
             date={article.data.date}
+            time={article.data.time}
             author={article.data.author}
             slug={article.slug}
             image={article.data.image}
