--- a/src/pages/vtuber.astro
+++ b/src/pages/vtuber.astro
@@ -31,6 +31,7 @@ const sortedArticles = articles.sort((a, b) =>
             tag={article.data.tag}
             tagName={article.data.tagName}
             date={article.data.date}
+            time={article.data.time}
             author={article.data.author}
             slug={article.slug}
             image={article.data.image}
