--- a/src/pages/guide.astro
+++ b/src/pages/guide.astro
@@ -13,13 +13,7 @@ const sortedArticles = articles.sort((a, b) =>
 ---
 
 <BaseLayout title="遊戲攻略" description="TFT、原神等熱門遊戲攻略">
-  <section class="hero-carousel" style="height: 200px;">
-    <div class="carousel-slide slide-guide" style="min-width: 100%;">
-      <div>
-        <h2>📖 遊戲攻略</h2>
-        <p>TFT、原神、各類遊戲的實用攻略</p>
-      </div>
-    </div>
+  <section class="page-banner" style="background-image: url('/images/banners/banner_game.jpg');">
   </section>
 
   <section>
