--- a/src/pages/vtuber.astro
+++ b/src/pages/vtuber.astro
@@ -13,13 +13,7 @@ const sortedArticles = articles.sort((a, b) =>
 ---
 
 <BaseLayout title="VTuber 專區" description="台灣 VTuber 新聞、專訪與介紹">
-  <section class="hero-carousel" style="height: 200px;">
-    <div class="carousel-slide slide-vtuber" style="min-width: 100%;">
-      <div>
-        <h2>🦊 VTuber 專區</h2>
-        <p>台灣 VTuber 的新聞、專訪與創作者介紹</p>
-      </div>
-    </div>
+  <section class="page-banner" style="background-image: url('/images/banners/banner_Vtuber.jpg');">
   </section>
 
   <section>
